nextcloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud    
    spec:
#Containerbeginn
      containers:
      - name: nextcloud
        image: nextcloud
        - name: POSTGRES_DB
          value: nextcloud_db
        - name: POSTGRES_HOST
          value: next-postgres.nextcloud.svc.cluster.local
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: nextcloud.next-postgres.credentials
              key: username
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: nextcloud.next-postgres.credentials
              key: password
#offene Ports des Containers
        ports:
        - name: apache
          containerPort: 80
          protocol: TCP
#Container-Volume
        volumeMounts:
        - mountPath: /var/www/html
          name: nextcloud-storage
#Anbindung des PVC
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim:
        claimName: nextcloud-claim
